updated data openapi json to update api documentation
