# chapter-05/app/controller/api/users.js
@@ -1,13 +1,14 @@
 const express = require('express');
 const router = express.Router();
 const UsersController = require('../userController');
+const UsersAuthController = require('../authController');
 const AuthServices = require('../../services/authServices');
 
 router
-.get('/', UsersController.getListUsers)
-.get('/current-user',UsersController.getCurrentUser)
+.get('/',UsersAuthController.authorizationToAdmin , UsersController.getListUsers)
+.get('/current-user',UsersAuthController.getCurrentUser)
 .post('/register', UsersController.registrationValidation ,UsersController.registrationMember)
-.post('/register-admin', UsersController.authorizationToAdmin , UsersController.registrationValidation ,UsersController.registrationAdmin)
+.post('/register-admin', UsersAuthController.authorizationToAdmin , UsersController.registrationValidation ,UsersController.registrationAdmin)
 .post('/auth',UsersController.loginValidation ,UsersController.login)
 .get('/auth/google',AuthServices.googleAuth)
 .get('/auth/google/callback',AuthServices.googleAuthCallback, UsersController.redirectDashboard)
